Fix spacing

--- a/src/containers/dashboard/Dashboard.css
+++ b/src/containers/dashboard/Dashboard.css
@@ -66,7 +66,6 @@
         --margins-size: calc(var(--side-margins) / 2);
         --text-shadow-distance: 0.25rem;
 
-        width: calc(100% - var(--side-margins));
         overflow-y: scroll;
         margin-bottom: var(--margins-size);
     }
